k8s/GuiKill.yml
---
apiVersion: v1
kind: Service
metadata:
  name: guikill
spec:
  selector:
    name: guikill
  ports:
  - port: 3476
    targetPort: 3476
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: guikill
spec:
  selector:
    matchLabels:
      name: guikill
  template:
    metadata:
      labels:
        name: guikill
    spec:
      containers:
      - name: guikill
        image: registry.default.svc.cluster.local/linnil1/dockerserver
        command: [python3]
        args: [/app/DockerServer/guikill.py]
        ports:
        - containerPort: 3476
          protocol: TCP
        volumeMounts:
        - name: volume
          mountPath: /app/DockerServer
          subPath: DockerServer
        - name: docker-sock
          mountPath: /var/run/docker.sock
      volumes:
      - name: docker-sock
        hostPath: 
          path: /var/run/docker.sock
      - name: volume
        persistentVolumeClaim:
          claimName: nfs-labserver
