k8s/myapi_k8s_set.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapi-k8s
spec:
  selector:
    matchLabels:
      name: myapi-k8s
  replicas: 1
  template:
    metadata:
      labels:
        name: myapi-k8s
    spec:
      serviceAccountName: myapi-k8s
      containers:
      - name: myapi-k8s
        image: linnil1/myapi_k8s
        command: [tail]
        args: ['-f', '/dev/null']
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3476
          protocol: TCP
        volumeMounts:
        - name: volume
          mountPath: /app
          subPath: myapi_k8s
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: nfs-labserver
      nodeSelector:
        kubernetes.io/hostname: lab304-server2
---
apiVersion: v1
kind: Service
metadata:
  name: myapi-k8s
spec:
  selector:
    name: myapi-k8s
  ports:
  - port: 3476
    targetPort: 3476
