k8s/nextcloud_db.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
spec:
  selector:
    name: nextcloud-db-pod
  ports:
  - port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
spec:
  selector:
    matchLabels:
      name: nextcloud-db
  replicas: 1
  template:
    metadata:
      labels:
        name: nextcloud-db
    spec:
      containers:
      - name: nextcloud-db
        image: mariadb
        ports:
        - containerPort: 3306
          protocol: TCP
        volumeMounts:
        - name: volume
          mountPath: /var/lib/mysql
          subPath: Nextcloud/db
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: nfs-labserver
