k8s/nextcloud_fpm.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-fpm
spec:
  selector:
    name: nextcloud-fpm
  ports:
  - port: 9000
    targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-fpm
spec:
  selector:
    matchLabels:
      name: nextcloud-fpm
  replicas: 1
  template:
    metadata:
      labels:
        name: nextcloud-fpm
    spec:
      containers:
      - name: nextcloud-fpm
        image: registry-svc.default.svc.cluster.local:5002/linnil1/nextcloudfpm
        ports:
        - containerPort: 9000
          protocol: TCP
        volumeMounts:
        - name: volume
          mountPath: /var/www/html
          subPath: Nextcloud/nextcloud
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: nfs-labserver
