k8s/nextcloud_web.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-nginx
spec:
  selector:
    name: nextcloud-nginx
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-nginx
spec:
  selector:
    matchLabels:
      name: nextcloud-nginx
  replicas: 1
  template:
    metadata:
      labels:
        name: nextcloud-nginx
    spec:
      containers:
      - name: nextcloud-nginx
        image: nginx
        ports:
        - containerPort: 443
          protocol: TCP
        volumeMounts:
        - name: volume
          mountPath: /certs
          readOnly: true
          subPath: certs
        - name: volume
          mountPath: /etc/nginx/nginx.conf
          readOnly: true
          subPath: Nextcloud/nginx-k8s.conf
        - name: volume
          mountPath: /var/www/html
          subPath: Nextcloud/nextcloud
        - name: volume
          mountPath: /var/log/nginx/
          subPath: Nextcloud/log
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: nfs-labserver
