k8s/portus.yml
---
apiVersion: v1
kind: Service
metadata:
  name: portus
spec:
  selector:
    name: portus
  ports:
  - port: 443
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portus
spec:
  selector:
    matchLabels:
      name: portus
  replicas: 1
  template:
    metadata:
      labels:
        name: portus
    spec:
      containers:
      - name: portus
        image: opensuse/portus:2.4
        command: ["/bin/sh", "/init_portus"]
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: volume
          mountPath: /certs
          subPath: Portus/certs
          readOnly: true
        - name: volume
          mountPath: /init_portus
          subPath: Portus/init_portus
          readOnly: true
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: nfs-labserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portus-background
spec:
  selector:
    matchLabels:
      name: portus-background
  replicas: 1
  template:
    metadata:
      labels:
        name: portus-background
    spec:
      containers:
      - name: portus-background
        image: opensuse/portus:2.4
        command: ["/bin/sh", "/init_portus"]
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: volume
          mountPath: /certs
          subPath: Portus/certs
          readOnly: true
        - name: volume
          mountPath: /init_portus
          subPath: Portus/init_portus
          readOnly: true
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: nfs-labserver
