k8s/portus_db.yml
---
apiVersion: v1
kind: Service
metadata:
  name: portus-db
spec:
  selector:
    name: portus-db
  ports:
  - port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portus-db
spec:
  selector:
    matchLabels:
      name: portus-db
  replicas: 1
  template:
    metadata:
      labels:
        name: portus-db
    spec:
      containers:
      - name: portus-db
        image: mariadb:10.4
        ports:
        - containerPort: 3306
          protocol: TCP
        volumeMounts:
        - name: volume
          mountPath: /var/lib/mysql
          subPath: Portus/db
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: nfs-labserver
