k8s/portus_registry.yml
---
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  selector:
    name: registry
  ports:
  - port: 443
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  selector:
    matchLabels:
      name: registry
  replicas: 1
  template:
    metadata:
      labels:
        name: registry
    spec:
      containers:
      - name: registry
        image: registry:2.6
        command: ['/bin/sh']
        args: ['/init_registry']
        ports:
        - containerPort: 5000
          protocol: TCP
        volumeMounts:
        - name: volume
          mountPath: /var/lib/registry
          subPath: Portus/registry
        - name: volume
          mountPath: /etc/docker/registry/config.yml
          subPath: Portus/config_registry.yml
          readOnly: true
        - name: volume
          mountPath: /init_registry
          subPath: Portus/init_registry
          readOnly: true
        - name: volume
          mountPath: /certs
          subPath: Portus/certs
          readOnly: true
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: nfs-labserver
