k8s/lab_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
    traefik.protocol: https
spec:
  rules:
  - http:
      paths:
      - path: /drive/
        backend:
          serviceName: nextcloud-nginx
          servicePort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vnc
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /vnc/
        backend:
          serviceName: myvnc
          servicePort: 6080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: labboxmain
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: labboxmain
          servicePort: 5000
