k8s/policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: user-policy
  namespace: user
spec:
  podSelector:
    matchLabels:
      UserDocker: 'true'
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except: 
        - 10.90.0.0/16
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
